css/style.css
/* ... */
.home {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100dvh;
  z-index: 1;

  .home-info {
    position: relative;
    display: flex;
    align-items: center;
    flex-flow: column;
    margin: 0 var(--box-15-17);

    /* margin-top: clamp(40px, 15vw, 150px); */
    /* margin-top: clamp(40px, 10vw, 150px); */
    margin-top: clamp(10px, 25vw, 150px);

    padding-top: 54px;
    gap: var(--gab-20-16);

    .home-box-perfil {
      display: flex;
      gap: 8px;

      padding: 3px 11px 3px 4px;
      border-radius: var(--radius-full);

      border: 1.25px solid #fff3;
      background-color: #0007;
      backdrop-filter: saturate(200%) blur(7px);

      .home-image {
        height: 30px;
      }

      .home-name_role {
        color: #fff;
        font-family: var(--font-google-sans);
        font-weight: 300;
        line-height: 30px;
        letter-spacing: 0.5px; /* 7px scale 400 */
      }
    }

    .home-title-propuesta h1 {
      text-align: center;
      font-weight: 700;
      letter-spacing: -1.45px; /* 16px scale 400 */
      color: #fff;
      text-wrap: balance;

      @media (width > 768px) {
        font-size: var(--font-48);
        line-height: 57px;
      }
    }

    .home-subtitle-resumen {
      max-width: 750px;
      text-align: center;
      font-size: 17px;
      line-height: 20px;
      font-weight: 500;
      letter-spacing: -0.2px; /* 7px scale 400 */
      text-wrap: balance;
      color: var(--text-color-alpha);

      span {
        letter-spacing: -0.15px;
        color: #18f;
      }
      @media (width > 768px) {
        line-height: 23px;
      }
    }

    .home-competencias {
      padding: 4px 11px 4px 4px;
      border: 1.25px solid #fff4;
      border-radius: var(--radius-m);

      background-color: #0004;
      backdrop-filter: saturate(200%) blur(10px);

      .image-check {
        width: 24px;
        height: 20px;
        margin-top: -0.3px;
        margin-top: -0.3px;
      }

      .home-competencias-box {
        display: flex;
        align-items: center;
        align-items: start;

        p {
          margin-left: 3px;
          font-family: var(--font-google-sans);
          font-weight: 300;
          letter-spacing: 0.5px; /* 7px scale 400 */
          color: var(--color-white);
        }
      }
    }

    .home-disponiblidad {
      display: flex;
      --margin-top-0-32: clamp(0rem, -0.8182rem + 3.6364vw, 2rem);
      margin-top: var(--margin-top-0-32);
      border: 1px solid #fff3;
      border-radius: var(--radius-s);

      padding: 2px 12px 2px 6px;
      background-color: #fff3;
      background-image: linear-gradient(279deg, #0007, #1b1b1b 50%, #0007);
      backdrop-filter: saturate(200%) blur(1px);
      svg {
        margin-top: 1.2px;
        margin-right: 3px;
      }

      p {
        margin-bottom: 0;
        font-family: var(--font-google-sans);
        font-weight: 300;
        line-height: 26px;
        letter-spacing: 0.5px; /* 7px scale 400 */
        color: var(--color-white);
      }
    }
  }
}

.skills {
  padding-bottom: var(--box-25-28);
  margin: 0 var(--box-15-17);

  .skill-container {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(18rem, 1fr));
    grid-gap: var(--gab-20-16);
    margin-top: var(--box-15-17);

    .skill-box {
      display: flex;
      flex-direction: column;

      .skill-title {
        margin-bottom: var(--box-15-17);
        font-size: 17px;
        letter-spacing: 1%;
        color: var(--text-color);
      }

      .skill-item {
        display: flex;
        padding: 4px;
        padding-left: 0;

        img {
          max-width: 59px;
          max-height: 59px;
          aspect-ratio: 1 / 1;
          object-fit: cover;
          border: 0.5px solid #7772;
          border-radius: var(--radius-m);
          corner-shape: squircle;
        }

        .skill-info {
          padding: 5px;

          h3 {
            font-size: 15px;
            letter-spacing: 0.2px; /* 8px scale 400 */
          }
          p {
            color: var(--text-color-alpha);
            color: #0000008f;
            font-size: 13px;
            letter-spacing: -0.2px; /* 7px scale 400 */
          }
        }
      }
    }
  }
}
/* ... */

